# netbsd

include/: db.h  dirent.h  errno.h  fts.h  locale.h  math.h  ndbm.h  sched.h  setjmp.h  signal.h  stdio.h  stdlib.h  time.h  unistd.h
lib/libc/cdb/: cdbw.c
lib/libc/dlfcn/: dlfcn_elf.c
lib/libc/gdtoa/: strtod.c  strtof.c  strtof_vaxf.c  strtold_subr.c
lib/libc/hash/: hashhl.c
lib/libc/iconv/: iconv.c
lib/libc/include/: namespace.h
lib/libc/inet/: inet_cidr_ntop.c  inet_cidr_pton.c  inet_lnaof.c  inet_makeaddr.c  inet_net_ntop.c  inet_net_pton.c  inet_neta.c  inet_netof.c  inet_network.c  inet_ntoa.c  inet_ntop.c  inet_pton.c  nsap_addr.c
lib/libc/locale/: duplocale.c  freelocale.c  iswctype_mb.c  newlocale.c  nl_langinfo.c  setlocale.c  wcsftime.c  wcstod.c  wcstof.c  wcstold.c
lib/libc/md/: mdXhl.c
lib/libc/misc/: initfini.c  stack_protector.c
lib/libc/net/: ethers.c  getaddrinfo.c  gethnamaddr.c  getifaddrs.c  getnameinfo.c  getnetent.c  getnetnamadr.c  getprotobyname.c  getprotobyname_r.c  getprotobynumber.c  getprotobynumber_r.c  getprotoent.c  getprotoent_r.c  getservbyname.c  getservbyname_r.c  getservbyport.c  getservbyport_r.c  getservent.c  getservent_r.c  hesiod.c  if_indextoname.c  if_nameindex.c  if_nametoindex.c  ip6opt.c  nsdispatch.c  rthdr.c  send.c  sethostent.c  vars6.c
lib/libc/nls/: catclose.c  catgets.c  catopen.c
lib/libc/posix1e/: acl_init.c
lib/libc/regex/: regcomp.c  regerror.c  regexec.c  regfree.c
lib/libc/resolv/: herror.c  res_comp.c  res_data.c  res_debug.c  res_init.c  res_mkquery.c  res_query.c  res_send.c  res_state.c
lib/libc/rpc/: auth_none.c  auth_unix.c  authunix_prot.c  bindresvport.c  clnt_bcast.c  clnt_dg.c  clnt_generic.c  clnt_perror.c  clnt_raw.c  clnt_simple.c  clnt_vc.c  getnetconfig.c  getnetpath.c  getrpcent.c  getrpcport.c  pmap_clnt.c  pmap_getmaps.c  pmap_getport.c  pmap_prot.c  pmap_prot2.c  pmap_rmt.c  rpc_callmsg.c  rpc_generic.c  rpc_prot.c  rpc_soc.c  rpcb_clnt.c  rpcb_prot.c  rpcb_st_xdr.c  svc.c  svc_auth.c  svc_dg.c  svc_fdset.c  svc_generic.c  svc_raw.c  svc_run.c  svc_simple.c  svc_vc.c  xdr_float.c  xdr_rec.c  xdr_reference.c  (+2 more)
lib/libc/softfloat/: fpgetmask.c  fpgetround.c  fpgetsticky.c  fpsetmask.c  fpsetround.c  fpsetsticky.c
lib/libc/stdio/: dprintf.c  fdopen.c  fgetln.c  fgetwln.c  fileno.c  flockfile.c  fparseln.c  fprintf.c  fscanf.c  fseeko.c  ftello.c  fwprintf.c  fwscanf.c  getdelim.c  getline.c  mkstemp.c  printf.c  scanf.c  snprintf_ss.c  sscanf.c  swprintf.c  swscanf.c  vasprintf.c  vdprintf.c  vfprintf.c  vfscanf.c  vprintf.c  vscanf.c  vsnprintf.c  vsnprintf_ss.c  vsprintf.c  vsscanf.c  vswprintf.c  vswscanf.c  vwprintf.c  vwscanf.c  wprintf.c  wscanf.c
lib/libc/stdlib/: a64l.c  atoll.c  cxa_thread_atexit.c  drand48.c  erand48.c  erand48_ieee754.c  exit.c  getenv.c  getopt.c  getopt_long.c  getsubopt.c  imaxabs.c  imaxdiv.c  jemalloc.c  jrand48.c  l64a.c  lcong48.c  llabs.c  lldiv.c  lrand48.c  malloc.c  merge.c  mrand48.c  nrand48.c  qabs.c  qdiv.c  radixsort.c  reallocarr.c  seed48.c  setenv.c  srand48.c  strsuftoll.c
lib/libc/string/: bm.c  strcoll.c  strdup.c  strerror.c  strerror_r.c  strerror_ss.c  stresep.c  strndup.c  strsignal.c  strtok_r.c  strxfrm.c  wcsdup.c
lib/libc/sys/: ftruncate.c  lseek.c  mmap.c  ntp_adjtime.c  pread.c  pwrite.c  sigwait.c  sigwaitinfo.c
lib/libc/termios/: cfgetispeed.c  cfgetospeed.c  cfmakeraw.c  cfsetispeed.c  cfsetospeed.c  cfsetspeed.c  tcdrain.c  tcflow.c  tcflush.c  tcgetattr.c  tcgetpgrp.c  tcgetsid.c  tcsendbreak.c  tcsetattr.c  tcsetpgrp.c
lib/libc/thread-stub/: thread-stub-init.c  thread-stub.c
lib/libc/time/: asctime.c  localtime.c  strftime.c  strptime.c
lib/libc/uuid/: uuid_create_nil.c  uuid_is_nil.c
lib/libc/yp/: xdryp.c  yp_all.c  yp_first.c  yp_maplist.c  yp_master.c  yp_match.c  yp_order.c  yperr_string.c  yplib.c  ypprot_err.c
lib/libm/complex/: casin.c  casinf.c  casinl.c  catan.c  catanf.c  catanl.c  catrig.c  catrigf.c  catrigl.c
lib/libm/noieee_src/: n_asincos.c  n_atan2.c  n_cosh.c  n_exp.c  n_floor.c  n_fmax.c  n_fmod.c  n_log.c  n_pow.c  n_round.c  n_sincos.c  n_sincos1.c  n_sinh.c
lib/libm/softfloat/: feclearexcept.c  fedisableexcept.c  feenableexcept.c  fegetenv.c  fegetexcept.c  fegetexceptflag.c  fegetround.c  feholdexcept.c  feraiseexcept.c  fesetenv.c  fesetexceptflag.c  fesetround.c  fetestexcept.c  feupdateenv.c
lib/libm/src/: s_floorl.c  s_modfl.c  s_roundl.c  s_scalbn.c  s_sin.c  s_sincos.c  s_sincosf.c  s_sincosl.c  s_sinf.c  s_truncl.c  w_asin.c  w_asinf.c  w_atan2.c  w_atan2f.c  (+11 more)
lib/libpthread/: pthread.h
libexec/ld.wasm/: internal.h  printf.c  rtld.c  rtld.h  rtld_aux.h  rtld_dlmalloc.c  rtld_malloc.c  rtld_mmap.c  rtld_paths.h  rtsys.c  rtsys.h  stdlib.c  stdlib.h
sbin/init/: init.c  init_wasm.c
sbin/mount/: mount.c
sbin/umount/: vfslist.c
share/mk/: bsd.endian.mk
sys/conf/: newvers.js  newvers.mk  newvers.sh
sys/dev/: mm.c  smbios.c
sys/kern/: exec_subr.c  exec_wasm32.c  files.kern  init_main.c  init_sysctl.c  init_sysent.c  kern_core.c  kern_cpu.c  kern_descrip.c  kern_entropy.c  kern_event.c  kern_exec.c  kern_lwp.c  kern_malloc.c  kern_module.c  kern_mutex.c  kern_physio.c  kern_proc.c  kern_resource.c  kern_rwlock.c  kern_rwlock_obj.c  kern_sig.c  kern_sleepq.c  kern_softint.c  kern_stub.c  kern_synch.c  kern_sysctl.c  kern_tc.c  kgdb_stub.c  subr_copy.c  subr_exec_fd.c  subr_kmem.c  subr_percpu.c  subr_pool.c  subr_prf.c  subr_thmap.c  subr_time.c  subr_vmem.c  sys_aio.c  sys_futex.c  (+19 more)
sys/net/: rtsock_shared.c
sys/sys/: atomic.h  bswap.h  cdefs.h  cdefs_aout.h  exec_wasm.h  lwp.h  mman.h  module.h  pool.h  proc.h  select.h  stat.h  syscallargs.h  systm.h  time.h  timevar.h  uio.h
sys/uvm/: uvm_anon.c  uvm_aobj.c  uvm_bio.c  uvm_coredump.c  uvm_device.c  uvm_extern.h  uvm_fault_i.h  uvm_glue.c  uvm_init.c  uvm_io.c  uvm_km.c  uvm_meter.c  uvm_mmap.c  uvm_object.c  uvm_page.c  uvm_page.h  uvm_page_status.c  uvm_pdpolicy.h  uvm_pdpolicy_clock.c  uvm_physseg.c  uvm_readahead.c  uvm_swap.c  uvm_unix.c  uvm_user.c  uvm_vnode.c
wasm-kern/: BUILD.gn
(+269 files in other folders)
