# gn gen build/Debug --args="target_os=\"wasm-llvm\""

config("kern_config") {

    defines = [
        #"DEBUG=1",
        "_KERNEL=1",
        "_KERNEL_OPT=1",
        "__NetBSD__=1",
        "__BSD_VISIBLE=1",
        "MAXCPU=1",
        "__WASM=32",
        "__WASM_KDEBUG=1",
        "SFBUF_NOMD",
        "SFBUF",
        "DEVICE_POLLING",
        "COMPAT_FREEBSD32",
        "INTRNG",
        "_WANT_LWPINFO32",
        #"INET",
        #"_WANT_KEVENT32", # related to freebsd32 compat.
        #"WASM_OPT_MEMINST=1", # insert placeholder functions for memory.fill & memory.copy
        
        "COMPAT_43=1",              # needed for /sbin/init
        "COMPAT_FREEBSD11=1",

        # Development Defines
        #"INVARIANTS=1",
        #"WITNESS=1",
        #"__WASI_COMPAT_ERRNO=1",
        #"LOCK_DEBUG=1",
        "KTRACE=1",
        "EXEC_WASM32=1",
        "_KERNEL_OPT=1",
        "DEBUG_MEMLOAD=1",
        #"__WASM_KERN_DEBUG_PRINT=1",    # enables extra debug prints.
        "__WASM_KERN_DIAGNOSTIC=1",     # enables extra assertion 
    ]

    include_dirs = [
        "../sys/arch/wasm/wasm",
        "../sys/arch/wasm/compile",
        "../sys",
        "../sys/sys",
        "../sys/kern", # bus_if.h device_if.h, linker_if.h
        
        "../sys/contrib/ck/include",
        "../include",
        "../common/include",
        "../sys/dev/ofw", # needed for compiling fdt staticaly.
        "../sys/dev",
        "../usr.bin/audiocfg",
        "../sys/lib/",
        "../sys/external/bsd/libfdt/dist",

        "../external/bsd/nsd/include",
        "../common/lib",
        "../sys/external/bsd/libnv/dist",
        "../sys/external/bsd/acpica/dist",
        "../common/lib/libx86emu",
        "../common/lib/libc/misc",
        "../common/lib/libc/hash/sha3",
    ]
    cflags = [
        "--target=wasm32-unknown-unknown",
        "--no-standard-libraries",
        "-m32",
        "-Wno-unused-command-line-argument",
        "-Wno-main-return-type",
        "-fcolor-diagnostics",
        "-fmacro-backtrace-limit=0",
        "-fno-builtin",
        #"-fno-builtin-memcpy",
        #"-fno-builtin-memset",
        "-g",
    ]
    ldflags = [
        "--import-memory",
        "--export-all", # use this to check whats missing if everything where to be included by linker.
        "--no-entry",
        "--global-base=131072", # make the first two 64kb pages empty..
        #"--shared",
        #"--experimental-pic",
        #"--global-base=1024",
        #"-s", "WASM_BIGINT",
        #"-s", "WASM=1",
        #"-o", "kern.html"
    ]
}

common_src = [
    "../sys/arch/wasm/wasm/mainbus.c",          # TODO: merge with wasm_mainbus.c
    "../sys/arch/wasm/wasm/x86_autoconf.c",
    #"../sys/arch/wasm/wasm/autoconf.c",        # don't do this for now..
    "../sys/arch/wasm/wasm/bus_dma.c",
    "../sys/arch/wasm/wasm/bus_space.c",
    #"../sys/arch/wasm/wasm/bus_space_generic.c",
    "../sys/arch/wasm/wasm/busfunc.c",
    #"../sys/arch/wasm/wasm/bus_stubs.c",       # TODO: i386 base remove
    #"../sys/arch/wasm/wasm/clock_machdep.c",   # TODO: i386 base remove ????
    "../sys/arch/wasm/wasm/core_machdep.c",
    "../sys/arch/wasm/wasm/dumpsys.c",
    "../sys/arch/wasm/wasm/cpu.c",
    "../sys/arch/wasm/wasm/cpufunc.c",
    #"../sys/arch/wasm/wasm/cpu_subr.c",
    #"../sys/arch/wasm/wasm/cpu_switch.S",      # usage ??
    "../sys/arch/wasm/wasm/exec_machdep.c",
    "../sys/arch/wasm/wasm/gdt.c",
    #"../sys/arch/wasm/wasm/fixup.c",           # TODO: i386 base remove ?????
    "../sys/arch/wasm/wasm/fpu.c",
    "../sys/arch/wasm/wasm/idt.c",
    "../sys/arch/wasm/wasm/intr.c",
    "../sys/arch/wasm/wasm/i838func.c",
    "../sys/arch/wasm/wasm/isa_machdep.c",
    "../sys/arch/wasm/wasm/lock_stubs.c",
    "../sys/arch/wasm/wasm/tsc.c",
    #"../sys/arch/wasm/wasm/pmap.c",
    "../sys/arch/wasm/wasm/process_machdep.c",
    "../sys/arch/wasm/wasm/procfs_machdep.c",
    #"../sys/arch/wasm/wasm/wasm_tlb.c",
    #"../sys/arch/wasm/wasm/wasm_generic_dma.c",
    "../sys/arch/wasm/wasm/machdep.c",
    #"../sys/arch/wasm/wasm/sbi.c",             # TODO: i386 base remove
    #"../sys/arch/wasm/wasm/sig_machdep.c",     # TODO: i386 base remove
    "../sys/arch/wasm/wasm/wasm_softintr.c",
    #"../sys/arch/wasm/wasm/spl.S",             # usage ??
    "../sys/arch/wasm/wasm/nmi.c",
    "../sys/arch/wasm/wasm/mp.c",
    "../sys/arch/wasm/wasm/stub.c",
    "../sys/arch/wasm/wasm/syscall.c",
    "../sys/arch/wasm/wasm/sys_machdep.c",
    "../sys/arch/wasm/wasm/efi_machdep.c",
    "../sys/arch/wasm/wasm/copy.c",
    "../sys/arch/wasm/wasm/trap.c",
    "../sys/arch/wasm/wasm/vm_machdep.c",
    "../sys/arch/wasm/wasm/x86_machdep.c",
    "../sys/arch/wasm/wasm/wasm_mainbus.c",
    "../sys/arch/wasm/wasm/ioapic.c",
    "../sys/arch/wasm/wasm/apic.c",
    "../sys/arch/wasm/wasm/mpbios.c",
    "../sys/arch/wasm/wasm/lapic.c",
    "../sys/arch/wasm/wasm/consinit.c",
    #"../sys/arch/wasm/wasm/wasm_bio.c",
    
    "../sys/arch/wasm/mm/mm.c",
    "../sys/arch/wasm/mm/malloc.c",
    "../sys/arch/wasm/mm/mm_uarea.c",
    #"../sys/arch/wasm/mm/mm_bio.c",
    "../sys/arch/wasm/mm/mm_map.c",
    "../sys/arch/wasm/mm/mm_sysctl.c",
    "../sys/arch/wasm/mm/mm-test.c",
    "../sys/arch/wasm/libwasm/lib128.c",
    "../sys/arch/wasm/libwasm/wasm_loader.c",
    "../sys/arch/wasm/wasm/superentropy.c",
    "../sys/arch/wasm/wasm/wasm_log.c",

    # devices 
    "../sys/dev/cons.c",

    "../sys/dev/dev_verbose.c",
    "../sys/dev/ic/com.c",
    "../sys/dev/ic/pckbc.c",
    "../sys/dev/ic/wdc.c",
    "../sys/dev/ic/pcdisplay_subr.c",
    "../sys/dev/ic/pcdisplay_chars.c",
    "../sys/dev/ic/vga.c",
    "../sys/dev/ic/vga_subr.c",
    "../sys/dev/ic/vga_common.c",
    "../sys/dev/ic/lpt.c",          # need for dev/isa/lpt_isa.c

    # ata device (@TODO replace with opfs disk image block device)
    "../sys/dev/ata/wd.c",
    "../sys/dev/ata/ata_wdc.c",
    "../sys/dev/ata/ata.c",
    "../sys/dev/ata/ata_subr.c",
    "../sys/dev/ata/ata_recovery.c",

    # opfs block device
    "../sys/arch/wasm/dev/opfsblk/opfsblk.c",

    # isa 
    "../sys/dev/isa/fd.c",
    "../sys/dev/isa/fdc_isa.c",
    "../sys/dev/isa/isa.c",
    "../sys/dev/isa/isa_stub.c",
    "../sys/dev/isa/isabusprint.c",
    "../sys/dev/isa/isadma.c",
    "../sys/dev/isa/com_isa.c",
    "../sys/dev/isa/lpt_isa.c",
    "../sys/dev/isa/wdc_isa.c",
    "../sys/dev/isa/pckbc_isa.c",
    "../sys/dev/isa/vga_isa.c",
    "../sys/dev/isa/pcdisplay.c",

    # pcic_isa_ca
    "../sys/dev/isa/i82365_isa.c",      
    "../sys/dev/isa/i82365_isasubr.c",
    "../sys/dev/ic/i82365.c",

    "../sys/dev/pckbport/pckbport.c",
    "../sys/dev/pckbport/pckbd.c",
    "../sys/dev/pckbport/wskbdmap_mfii.c",

    "../sys/dev/eisa/eisabusprint.c",
    "../sys/dev/mca/mcabusprint.c",
    "../sys/dev/pcmcia/pcmcia.c",
    "../sys/dev/pcmcia/pcmcia_cis.c",
    "../sys/dev/pcmcia/pcmcia_cis_quirks.c",
    "../sys/dev/pcmcia/com_pcmcia.c",
    "../sys/dev/pcmcia/wdc_pcmcia.c",

    # wscons
    "../sys/dev/wscons/wsdisplay.c",
    "../sys/dev/wscons/wsdisplay_compat_usl.c",
    "../sys/dev/wscons/wsdisplay_util.c",
    "../sys/dev/wscons/wsemulconf.c",
    "../sys/dev/wscons/wsemul_dumb.c",
    "../sys/dev/wscons/wsemul_vt100.c",
    "../sys/dev/wscons/wsemul_vt100_subr.c",
    "../sys/dev/wscons/wsemul_vt100_chars.c",
    "../sys/dev/wscons/wsemul_vt100_keys.c",
    "../sys/dev/wscons/wsevent.c",
    "../sys/dev/wscons/wskbd.c",
    "../sys/dev/wscons/wskbdutil.c",
    "../sys/dev/wscons/wsmux.c",
    "../sys/dev/wscons/wsbellmux.c",
    "../sys/dev/wsfont/wsfont.c",

    # scsipi
    "../sys/dev/scsipi/scsipiconf.c",
    "../sys/dev/scsipi/scsipi_base.c",
    "../sys/dev/scsipi/scsipi_ioctl.c",
    "../sys/dev/scsipi/atapi_base.c",
    "../sys/dev/scsipi/atapi_wdc.c",
    "../sys/dev/scsipi/atapiconf.c",
    "../sys/dev/scsipi/cd.c",
    "../sys/dev/scsipi/sd.c",

    "../sys/kern/subr_disk_mbr.c",
    #"../sys/arch/wasm/dev/plic.c",
    #"../sys/arch/wasm/dev/plic_fdt.c",
    #"../sys/arch/wasm/fdt/cpus_fdt.c",
    #"../sys/arch/wasm/fdt/fdt_dma_machdep.c",
    #"../sys/arch/wasm/fdt/wasm_platform.c",
    #"../sys/arch/wasm/fdt/cpu_fdt.c",
    #"../sys/arch/wasm/fdt/intc_fdt.c",
    #"../sys/dev/ld.c",
    "../sys/kern/kern_drvctl.c",
    "../sys/compat/common/compat_exec.c",
    "../sys/compat/common/compat_util.c",
    "../sys/crypto/aes/aes_bear.c",
    "../sys/crypto/aes/aes_ccm.c",
    "../sys/crypto/aes/aes_ccm_mbuf.c",
    "../sys/crypto/aes/aes_ct.c",
    "../sys/crypto/aes/aes_ct_dec.c",
    "../sys/crypto/aes/aes_ct_enc.c",
    "../sys/crypto/aes/aes_impl.c",
    "../sys/crypto/aes/aes_selftest.c",
    "../sys/crypto/chacha/chacha_impl.c",
    "../sys/crypto/chacha/chacha_ref.c",
    "../sys/crypto/chacha/chacha_selftest.c",
    "../sys/opencrypto/criov.c",
    "../sys/opencrypto/xform.c",
    "../sys/opencrypto/crypto.c",
    "../sys/opencrypto/cryptodev.c",
    "../sys/crypto/nist_hash_drbg/nist_hash_drbg.c",
    "../sys/crypto/cprng_fast/cprng_fast.c",
    "../sys/crypto/blake2/blake2s.c",
    #"../sys/dev/sysmon/sysmon.c",      # i386 remove?
    #"../sys/dev/sysmon/sysmon_wdog.c", # i386 remove?
    #"../sys/dev/sysmon/swwdog.c",      # i386 remove?
    "../sys/netatalk/at_print.c",
    "../sys/netinet/in_print.c",
    "../sys/netinet6/in6_print.c",
    "../sys/external/bsd/drm2/drm/drm_stub.c",
    "../sys/fs/ptyfs/ptyfs_subr.c",
    "../sys/fs/ptyfs/ptyfs_vfsops.c",
    "../sys/fs/ptyfs/ptyfs_vnops.c",
    "../sys/fs/tmpfs/tmpfs_fifoops.c",
    "../sys/fs/tmpfs/tmpfs_mem.c",
    "../sys/fs/tmpfs/tmpfs_rename.c",
    "../sys/fs/tmpfs/tmpfs_specops.c",
    "../sys/fs/tmpfs/tmpfs_subr.c",
    "../sys/fs/tmpfs/tmpfs_vfsops.c",
    "../sys/fs/tmpfs/tmpfs_vnops.c",
    "../sys/miscfs/fdesc/fdesc_vfsops.c",
    "../sys/miscfs/fdesc/fdesc_vnops.c",
    "../sys/miscfs/kernfs/kernfs_vfsops.c",
    "../sys/miscfs/kernfs/kernfs_vnops.c",
    "../sys/miscfs/procfs/procfs_auxv.c",
    "../sys/miscfs/procfs/procfs_cmdline.c",
    "../sys/miscfs/procfs/procfs_fd.c",
    "../sys/miscfs/procfs/procfs_fpregs.c",
    "../sys/miscfs/procfs/procfs_limit.c",
    "../sys/miscfs/procfs/procfs_linux.c",
    "../sys/miscfs/procfs/procfs_map.c",
    "../sys/miscfs/procfs/procfs_mem.c",
    "../sys/miscfs/procfs/procfs_note.c",
    "../sys/miscfs/procfs/procfs_regs.c",
    "../sys/miscfs/procfs/procfs_status.c",
    "../sys/miscfs/procfs/procfs_subr.c",
    "../sys/miscfs/procfs/procfs_vfsops.c",
    "../sys/miscfs/procfs/procfs_vnops.c",

    # uvm & pmap
    #"../sys/uvm/pmap/pmap.c",
    #"../sys/uvm/pmap/pmap_devmap.c",
    #"../sys/uvm/pmap/pmap_segtab.c",
    #"../sys/uvm/pmap/pmap_synci.c",
    #"../sys/uvm/pmap/pmap_tlb.c",
    "../sys/uvm/pmap/pmap_pvt.c",
    #"../sys/uvm/uvm_amap.c",
    #"../sys/uvm/uvm_anon.c",
    "../sys/uvm/uvm_aobj.c",
    "../sys/uvm/uvm_bio.c",                        # replaced by wasm_bio.c
    "../sys/uvm/uvm_coredump.c",
    "../sys/uvm/uvm_device.c",
    #"../sys/uvm/uvm_fault.c",
    "../sys/uvm/uvm_glue.c",
    "../sys/uvm/uvm_init.c",
    "../sys/uvm/uvm_io.c",
    #"../sys/uvm/uvm_km.c",
    #"../sys/uvm/uvm_loan.c",
    #"../sys/uvm/uvm_map.c",
    "../sys/uvm/uvm_meter.c",
    "../sys/uvm/uvm_mmap.c",
    #"../sys/uvm/uvm_mremap.c",
    "../sys/uvm/uvm_object.c",
    #"../sys/uvm/uvm_page.c",
    "../sys/uvm/uvm_page_array.c",
    "../sys/uvm/uvm_page_status.c",
    #"../sys/uvm/uvm_pager.c",
    #"../sys/uvm/uvm_pdaemon.c",
    #"../sys/uvm/uvm_pdpolicy_clock.c",
    "../sys/uvm/uvm_pgflcache.c",
    #"../sys/uvm/uvm_pglist.c",
    #"../sys/uvm/uvm_physseg.c",
    "../sys/uvm/uvm_readahead.c",
    "../sys/uvm/uvm_stat.c",
    "../sys/uvm/uvm_swap.c",    # we need this for a dummy swap-dev.
    "../sys/uvm/uvm_unix.c",
    "../sys/uvm/uvm_user.c",
    "../sys/uvm/uvm_vnode.c",

    "../sys/secmodel/secmodel.c",
    "../sys/conf/debugsyms.c",
    "../sys/conf/param.c",
    "../sys/kern/bufq_disksort.c",
    "../sys/kern/bufq_fcfs.c",
    "../sys/kern/bufq_priocscan.c",
    "../sys/kern/compat_stub.c",
    "../sys/kern/core_netbsd.c",
    "../sys/kern/cnmagic.c",
    "../sys/kern/exec_wasm32.c",
    "../sys/kern/exec_script.c",
    "../sys/kern/exec_subr.c",
    "../sys/kern/init_main.c",
    "../sys/kern/init_sysctl.c",
    "../sys/kern/init_sysctl_base.c",
    "../sys/kern/init_sysent.c",
    "../sys/kern/kern_acct.c",
    "../sys/kern/kern_auth.c",
    "../sys/kern/kern_cfglock.c",
    "../sys/kern/kern_clock.c",
    "../sys/kern/kern_condvar.c",
    "../sys/kern/kern_core.c",
    "../sys/kern/kern_cpu.c",
    "../sys/kern/kern_descrip.c",
    "../sys/kern/kern_entropy.c",   # might replace this with crypto.getRandomValues()
    "../sys/kern/kern_event.c",
    "../sys/kern/kern_exec.c",
    "../sys/kern/kern_exit.c",
    "../sys/kern/kern_fork.c",
    "../sys/kern/kern_idle.c",
    "../sys/kern/kern_hook.c",
    "../sys/kern/kern_kthread.c",
    "../sys/kern/kern_ktrace.c",
    "../sys/kern/kern_ktrace_vfs.c",
    "../sys/kern/kern_ksyms.c",
    "../sys/kern/kern_lock.c",
    "../sys/kern/kern_lwp.c",
    "../sys/kern/kern_malloc.c",
    "../sys/kern/kern_module.c",
    "../sys/kern/kern_module_hook.c",
    "../sys/kern/kern_module_vfs.c",
    "../sys/kern/kern_mutex.c",
    "../sys/kern/kern_mutex_obj.c",
    "../sys/kern/kern_ntptime.c",
    "../sys/kern/kern_pax.c",
    "../sys/kern/kern_physio.c",
    "../sys/kern/kern_pmf.c",
    "../sys/kern/kern_proc.c",
    "../sys/kern/kern_prot.c",
    "../sys/kern/kern_ras.c",
    "../sys/kern/kern_rate.c",
    "../sys/kern/kern_reboot.c",
    "../sys/kern/kern_resource.c",
    "../sys/kern/kern_runq.c",
    "../sys/kern/kern_rwlock.c",
    "../sys/kern/kern_rwlock_obj.c",
    "../sys/kern/kern_scdebug.c",
    "../sys/kern/kern_crashme.c",
    "../sys/kern/kern_sig.c",
    "../sys/kern/kern_sleepq.c",
    "../sys/kern/kern_softint.c",
    "../sys/kern/kern_ssp.c",
    "../sys/kern/kern_stub.c",
    "../sys/kern/kern_subr.c",
    "../sys/kern/kern_synch.c",
    "../sys/kern/kern_syscall.c",
    "../sys/kern/kern_sysctl.c",
    "../sys/kern/kern_tc.c",
    "../sys/kern/kern_threadpool.c",
    "../sys/kern/kern_time.c",
    "../sys/kern/kern_timeout.c",
    "../sys/kern/kern_turnstile.c",
    "../sys/kern/kern_todr.c",
    "../sys/kern/kern_uidinfo.c",
    "../sys/kern/kern_uuid.c",
    "../sys/kern/sched_4bsd.c",
    "../sys/kern/subr_acl_posix1e.c",
    "../sys/kern/subr_acl_nfs4.c",
    "../sys/kern/subr_autoconf.c",
    "../sys/kern/subr_blist.c",
    "../sys/kern/subr_bufq.c",
    "../sys/kern/subr_callback.c",
    "../sys/kern/subr_cprng.c",
    "../sys/kern/subr_cpu.c",
    "../sys/kern/subr_cpufreq.c",
    "../sys/kern/subr_copy.c",
    "../sys/kern/subr_device.c",
    "../sys/kern/subr_devsw.c",
    "../sys/kern/subr_disk.c",
    "../sys/kern/subr_disklabel.c",
    "../sys/kern/subr_disk_open.c",
    "../sys/kern/subr_emul.c",
    "../sys/kern/subr_evcnt.c",
    "../sys/kern/subr_exec_fd.c",
    "../sys/kern/subr_extent.c",
    "../sys/kern/subr_hash.c",
    "../sys/kern/subr_humanize.c",
    "../sys/kern/subr_interrupt.c",
    "../sys/kern/subr_iostat.c",
    "../sys/kern/subr_ipi.c",
    "../sys/kern/subr_kcpuset.c",
    "../sys/kern/subr_kmem.c",
    "../sys/kern/subr_kobj.c",
    "../sys/kern/subr_kobj_vfs.c",
    "../sys/kern/subr_localcount.c",
    "../sys/kern/subr_lockdebug.c",
    "../sys/kern/subr_log.c",
    "../sys/kern/subr_lwp_specificdata.c",
    "../sys/kern/subr_once.c",
    "../sys/kern/subr_optstr.c",
    "../sys/kern/subr_pcq.c",
    "../sys/kern/subr_pcu.c",
    "../sys/kern/subr_percpu.c",
    "../sys/kern/subr_pool.c",
    "../sys/kern/subr_prf.c",
    "../sys/kern/subr_prof.c",
    "../sys/kern/subr_pserialize.c",
    "../sys/kern/subr_psref.c",
    "../sys/kern/subr_specificdata.c",
    "../sys/kern/subr_time.c",
    "../sys/kern/subr_thmap.c",
    "../sys/kern/subr_userconf.c",
    #"../sys/kern/subr_vmem.c",          # phase-out
    "../sys/kern/subr_workqueue.c",
    "../sys/kern/subr_xcall.c",
    "../sys/kern/sys_aio.c",
    "../sys/kern/sys_descrip.c",
    "../sys/kern/sys_eventfd.c",
    "../sys/kern/sys_futex.c",
    "../sys/kern/sys_generic.c",
    "../sys/kern/sys_getrandom.c",
    "../sys/kern/sys_memfd.c",
    "../sys/kern/sys_module.c",
    "../sys/kern/sys_mqueue.c",
    "../sys/kern/sys_lwp.c",
    "../sys/kern/sys_pipe.c",
    "../sys/kern/sys_process.c",
    "../sys/kern/sys_process_lwpstatus.c",
    "../sys/kern/sys_ptrace.c",
    "../sys/kern/sys_ptrace_common.c",
    "../sys/kern/sys_pset.c",
    "../sys/kern/sys_select.c",
    "../sys/kern/sys_sig.c",
    "../sys/kern/sys_sched.c",
    "../sys/kern/sys_socket.c",
    "../sys/kern/sys_timerfd.c",
    "../sys/kern/sysv_ipc.c",
    "../sys/kern/sysv_msg.c",
    "../sys/kern/sysv_sem.c",
    "../sys/kern/sysv_shm.c",
    "../sys/kern/tty.c",
    "../sys/kern/tty_conf.c",
    "../sys/kern/tty_pty.c",
    "../sys/kern/tty_ptm.c",
    "../sys/kern/tty_subr.c",
    "../sys/kern/tty_tty.c",
    "../sys/kern/uipc_accf.c",
    "../sys/kern/uipc_domain.c",
    "../sys/kern/uipc_mbuf.c",
    "../sys/net/link_proto.c",
    "../sys/kern/uipc_proto.c",
    "../sys/kern/uipc_sem.c",
    "../sys/kern/uipc_socket.c",
    "../sys/kern/uipc_socket2.c",
    "../sys/kern/uipc_syscalls.c",
    "../sys/kern/uipc_usrreq.c",
    "../sys/kern/vfs_acl.c",
    "../sys/kern/vfs_bio.c",
    "../sys/kern/vfs_cache.c",
    "../sys/kern/vfs_cwd.c",
    "../sys/kern/vfs_dirhash.c",
    "../sys/kern/vfs_getcwd.c",
    "../sys/kern/vfs_hooks.c",
    "../sys/kern/vfs_init.c",
    "../sys/kern/vfs_lockf.c",
    "../sys/kern/vfs_lookup.c",
    "../sys/kern/vfs_mount.c",
    "../sys/kern/vfs_quotactl.c",
    "../sys/kern/vfs_subr.c",
    "../sys/kern/vfs_syscalls.c",
    "../sys/kern/vfs_trans.c",
    "../sys/kern/vfs_vnode.c",
    "../sys/kern/vfs_vnops.c",
    "../sys/kern/vfs_xattr.c",
    "../sys/kern/vnode_if.c",
    "../sys/miscfs/deadfs/dead_vfsops.c",
    "../sys/miscfs/deadfs/dead_vnops.c",
    "../sys/miscfs/fifofs/fifo_vnops.c",
    "../sys/miscfs/genfs/genfs_io.c",
    "../sys/miscfs/genfs/genfs_rename.c",
    "../sys/miscfs/genfs/genfs_vfsops.c",
    "../sys/miscfs/genfs/genfs_vnops.c",
    "../sys/miscfs/specfs/spec_vnops.c",

    "../sys/dev/clock_subr.c",
    "../sys/dev/clockctl.c",
    "../sys/dev/dksubr.c",
    "../sys/dev/dkwedge/dk.c",
    #"../sys/dev/dkwedge/dkwedge_apple.c",
    #"../sys/dev/dkwedge/dkwedge_bsdlabel.c",
    #"../sys/dev/dkwedge/dkwedge_gpt.c",
    #"../sys/dev/dkwedge/dkwedge_mbr.c",
    "../sys/dev/lockstat.c",
    "../sys/dev/mm.c",
    "../sys/dev/random.c",
    "../sys/dev/vnd.c",
    "../sys/dev/fss.c",     # even needed?
    "../sys/dev/smbios.c",

    "../sys/net/bpf_stub.c",
    "../sys/net/dl_print.c",
    "../sys/net/if.c",
    "../sys/net/if_ethersubr.c",
    "../sys/net/if_media.c",
    "../sys/net/if_stats.c",
    "../sys/net/nd.c",
    "../sys/net/pfil.c",
    "../sys/net/pktqueue.c",
    "../sys/net/net_stats.c",
    "../sys/net/radix.c",
    "../sys/net/raw_cb.c",
    "../sys/net/raw_usrreq.c",
    "../sys/net/route.c",
    "../sys/net/rss_config.c",
    "../sys/net/rtbl.c",
    "../sys/net/rtsock.c",
    "../sys/net/toeplitz.c",
    "../sys/net/zlib.c",        # might be required for /dev/vnd
    "../sys/netinet/if_arp.c",
    "../sys/secmodel/suser/secmodel_suser.c",
    "../sys/secmodel/securelevel/secmodel_securelevel.c",
    "../sys/secmodel/extensions/secmodel_extensions.c",
    "../sys/secmodel/extensions/secmodel_extensions_vfs.c",
    "../sys/secmodel/bsd44/secmodel_bsd44.c",
    "../sys/external/bsd/libfdt/dist/fdt.c",
    "../sys/external/bsd/libfdt/dist/fdt_addresses.c",
    "../sys/external/bsd/libfdt/dist/fdt_empty_tree.c",
    "../sys/external/bsd/libfdt/dist/fdt_ro.c",
    "../sys/external/bsd/libfdt/dist/fdt_rw.c",
    "../sys/external/bsd/libfdt/dist/fdt_strerror.c",
    "../sys/external/bsd/libfdt/dist/fdt_sw.c",
    "../sys/external/bsd/libfdt/dist/fdt_wip.c",
    "../sys/arch/wasm/compile/devsw.c",
    "../sys/arch/wasm/compile/ioconf.c",
    "../sys/arch/wasm/compile/swapnetbsd.c",

    #
    # these below was not provided by /usr/bin/config
    #
    # check the GENERIC and files in order for these to be setup correctly.
    #

    "../sys/arch/wasm/conf/vers.c",

    #"../sys/arch/wasm/wasm/wasm_atomic.c",
    "../sys/arch/wasm/wasm/wasm_asm.c",
    "../sys/arch/wasm/wasm/wasm_locore.c",    # kernel-bootstrap entry point
    "../sys/arch/wasm/wasm/lwp_machdep.c",
    "../sys/arch/wasm/wasm/dummy_x86.c",

    "../sys/arch/wasm/wasm/libkern/byte_swap.c",
    "../sys/arch/wasm/wasm/libkern/memcmp.c",
    "../sys/arch/wasm/wasm/libkern/memcpy.c",
    "../sys/arch/wasm/wasm/libkern/memmove.c",
    "../sys/arch/wasm/wasm/libkern/memset.c",
    "../sys/arch/wasm/wasm/libkern/strcmp.c",
    "../sys/arch/wasm/wasm/libkern/strcpy.c",
    "../sys/arch/wasm/wasm/libkern/strlcpy.c",
    "../sys/arch/wasm/wasm/libkern/strncmp.c",
    "../sys/arch/wasm/wasm/libkern/strncpy.c",
    "../sys/arch/wasm/wasm/libkern/strlen.c",
    "../sys/arch/wasm/wasm/builtin_iosurface.c",
    "../sys/lib/libkern/skpc.c",
    "../sys/lib/libkern/strnvisx.c",

    "../common/lib/libc/string/strrchr.c",
    "../common/lib/libc/string/strnlen.c",
    "../common/lib/libc/string/strncasecmp.c",
    "../common/lib/libc/string/strlcat.c",
    "../common/lib/libc/string/strcat.c",
    "../common/lib/libc/string/strchr.c",
    "../common/lib/libc/string/memchr.c",
    "../common/lib/libc/string/consttime_memequal.c",
    "../common/lib/libc/string/strcasecmp.c",
    "../common/lib/libc/string/popcount32.c",
    "../common/lib/libc/string/explicit_memset.c",
    "../common/lib/libc/string/strstr.c",
    "../common/lib/libc/stdlib/strtoul.c",
    "../common/lib/libc/stdlib/strtoll.c",
    "../common/lib/libc/stdlib/strtoull.c",
    "../common/lib/libc/stdlib/heapsort.c",

    #"../common/dist/zlib/inflate.c",    # required for /dev/vnd

    "../sys/lib/libkern/hexdump.c",
    "../sys/lib/libkern/strlist.c",
    "../sys/lib/libkern/scanc.c",
    "../sys/lib/libkern/pmatch.c",
    "../sys/lib/libkern/copystr.c",
    "../sys/lib/libkern/entpool.c",             # might replace this with crypto.getRandomValues()
    "../common/lib/libc/hash/sha3/keccak.c",
    "../common/lib/libc/md/md5c.c",             # required for x86_autoconf.c
    "../sys/lib/libkern/xlat_mbr_fstype.c",     # required for subr_disk_mbr.c
    
    "../common/lib/libutil/getfstypename.c",    # required for subr_disk_open.c
    "../common/lib/libutil/snprintb.c",         # required for vfs_subr.c
    "../common/lib/libutil/proc_compare.c",     # required for tty.c

    "../common/lib/libc/hash/murmurhash/murmurhash.c",  # murmurhash
    "../common/lib/libc/hash/sha1/sha1.c",              # sha1
    "../common/lib/libc/hash/sha2/sha2.c",              # sha256

    "../common/lib/libprop/prop_array.c",
    "../common/lib/libprop/prop_array_util.c",
    "../common/lib/libprop/prop_bool.c",
    "../common/lib/libprop/prop_data.c",
    "../common/lib/libprop/prop_dictionary.c",
    "../common/lib/libprop/prop_dictionary_util.c",
    "../common/lib/libprop/prop_ingest.c",
    "../common/lib/libprop/prop_kern.c",
    "../common/lib/libprop/prop_number.c",
    "../common/lib/libprop/prop_object.c",
    "../common/lib/libprop/prop_stack.c",
    "../common/lib/libprop/prop_string.c",

    "../common/lib/libc/gen/radixtree.c",
    "../common/lib/libc/gen/rb.c",

    # these was not compiled previously in the ninja version..
    "../sys/lib/libkern/crc32.c",
    "../sys/lib/libkern/dkcksum.c",


    "../sys/ufs/ext2fs/ext2fs_alloc.c",
    "../sys/ufs/ext2fs/ext2fs_balloc.c",
    "../sys/ufs/ext2fs/ext2fs_bmap.c",
    "../sys/ufs/ext2fs/ext2fs_bswap.c",
    "../sys/ufs/ext2fs/ext2fs_hash.c",
    "../sys/ufs/ext2fs/ext2fs_htree.c",
    "../sys/ufs/ext2fs/ext2fs_extents.c",
    "../sys/ufs/ext2fs/ext2fs_inode.c",
    "../sys/ufs/ext2fs/ext2fs_lookup.c",
    "../sys/ufs/ext2fs/ext2fs_readwrite.c",
    "../sys/ufs/ext2fs/ext2fs_rename.c",
    "../sys/ufs/ext2fs/ext2fs_subr.c",
    "../sys/ufs/ext2fs/ext2fs_vfsops.c",
    "../sys/ufs/ext2fs/ext2fs_vnops.c",
    "../sys/ufs/ext2fs/ext2fs_xattr.c",
    "../sys/ufs/ffs/ffs_alloc.c",
    "../sys/ufs/ffs/ffs_balloc.c",
    "../sys/ufs/ffs/ffs_extattr.c",
    "../sys/ufs/ffs/ffs_inode.c",
    "../sys/ufs/ffs/ffs_snapshot.c",
    "../sys/ufs/ffs/ffs_subr.c",
    "../sys/ufs/ffs/ffs_tables.c",
    "../sys/ufs/ffs/ffs_vfsops.c",
    "../sys/ufs/ffs/ffs_vnops.c",
    "../sys/ufs/mfs/mfs_miniroot.c",
    "../sys/ufs/ufs/ufs_acl.c",
    "../sys/ufs/ufs/ufs_bmap.c",
    "../sys/ufs/ufs/ufs_inode.c",
    "../sys/ufs/ufs/ufs_lookup.c",
    "../sys/ufs/ufs/ufs_rename.c",
    "../sys/ufs/ufs/ufs_vfsops.c",
    "../sys/ufs/ufs/ufs_vnops.c"

    # todo add support for hfs + fat files systems
]


executable("netbsd-kern") {
    sources = common_src
    configs += [
        ":kern_config"
    ]
    deps = [
        #"../external/bsd/nsd:libnsd",
    ]
}

group("main") {
    deps = [
        ":netbsd-kern",
    ]
}